svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-frontend
  namespace: default
spec:
  selector:
    app: ecommerce-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
