ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  annotations:
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: "ecommerce-cert"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: azure-application-gateway

  rules:
  - host: rishabhpathak.me
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: ecommerce-backend
            port:
              number: 3000

      - path: /
        pathType: Prefix
        backend:
          service:
            name: ecommerce-frontend
            port:
              number: 80
